[project]
name = "acoustic-echo-cancellation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pyaec>=1.0.1",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
]
